@@ -952,13 +952,12 @@ ActionHandler::findClientFromTitle(const std::string &or_title)
 {
     RegexString o_rs;
 
-    if (o_rs.parse_match (or_title))
-    {
-        list<Client*>::iterator it (_wm->client_begin ());
-        for (; it != _wm->client_end (); ++it)
-        {
-            if (o_rs == (*it)->getTitle()->getReal())
+    if (o_rs.parse_match (or_title)) {
+        list<Client*>::iterator it (Client::client_begin());
+        for (; it != Client::client_end (); ++it) {
+            if (o_rs == (*it)->getTitle()->getReal()) {
                 return (*it);
+            }
         }
     }
 
